--- a/templates/macros/stamp_macro.html
+++ b/templates/macros/stamp_macro.html
@@ -3,7 +3,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&display=swap');
     
     .stamp {
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(0.5);
@@ -16,7 +16,7 @@
         letter-spacing: 1px;
         color: white;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-        z-index: 100;
+        z-index: 9999;
         pointer-events: none;
         transition: all 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
         box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
